[package]
name = "fmm-c"
description = "C backend for F--"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fmm = { path = "../fmm" }
hashbrown = { version = "0.12", features = ["ahash-compile-time-rng"] }
tempfile = "3"

[dev-dependencies]
once_cell = "1"
pretty_assertions = "1"
