[package]
name = "fmm-llvm"
description = "LLVM backend for F--"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fmm = { path = "../fmm" }
fnv = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm15-0",
] }
llvm-sys = "150"
once_cell = "1"
