[package]
name = "fmm-llvm"
description = "LLVM backend for F--"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fmm = { path = "../fmm" }
fnv = "1"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys = "160"
once_cell = "1"
