[package]
name = "fmm-llvm"
description = "LLVM backend for F--"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fmm = { path = "../fmm" }
fnv = "1"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
llvm-sys = "170"
once_cell = "1"
