[package]
name = "fmm"
description = "F-- programming language"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fnv = "1"
indexmap = "1.9.3"
once_cell = "1"
petgraph = "0.6"
regex = "1"

[dev-dependencies]
insta = "1"
pretty_assertions = "1.3"
